2006-10-04  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* native/jni/java-nio/javanio.c (cpnio_read, cpnio_readv)
	(cpnio_write, cpnio_writev, cpnio_socket, cpnio_connect)
	(cpnio_accept, cpnio_sendto, cpnio_recvfrom, cpnio_fcntl)
	(cpnio_select): Use CPNIO_EXPORT.
	* native/jni/java-nio/javanio.h (CPNIO_EXPORT): Define to static
	inline instead of extern inline, as newer GCCs changed their
	behavior.

2006-10-04  Gary Benson  <gbenson@redhat.com>

	* java/net/InetAddress.java: Updated javadoc.
	(<clinit>, getByLiteral): Throw InternalError on failures.

2006-10-03  Francis Kung  <fkung@redhat.com>

	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	(compCtx): New field for composite context.
	(copy): Copy composite.
	(dispose): Dispose of composite context.
	(getNativeCM): New method.
	(setComposite): Discard old composite context and set up new context.
	(setRenderingHints): Update composite context.
	* gnu/java/awt/peer/gtk/CairoSurface.java
	(nativeColorModel): New field, renamed from nativeModel.
	(nativeModel): Renamed field to nativeColorModel.
	(CairoSurface(int, int)): Call new method to create sample model.
	(createNativeSampleModel): New method.
	(getBufferedImage): Updated variable name.
	* gnu/java/awt/peer/gtk/VolatileImageGraphics.java
	(buffer): New field.
	(createBuffer): New method.
	(draw): New method.
	(drawComposite): New method.
	(drawGlyphVector): New method.
	(drawImage(Image, AffineTransform, Color, ImageObserver)): New method.
	(drawImage(Image, int, int, ImageObserver)): Check composite.
	(drawImage(Image, int, int, int, int, ImageObserver)): Check composite.
	(fill): New method.
	(getNativeCM): New method.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkVolatileImage.c
	(Java_gnu_java_awt_peer_gtk_GtkVolatileImage_nativeGetPixels): Use 
	intermediary pixbuf to grab on-screen pixels.

2006-10-03  Tom Tromey  <tromey@redhat.com>

	PR classpath/28987:
	* java/util/IdentityHashMap.java (tombstone): Removed.
	(emptyslot): Removed.